--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 <body>
     
     <header class="header">
-
+        <img src="img/logo.png" alt="Logo Haruy Sushi">
+        <nav class="menu">
+            <ul class="menu-links">
+                <li><a href="#cardapio">CARDAPIO</a></li>
+                <li><a href="https://wa.me/5515987654321" target="_blank">PEÇA PELO WHATSAPP</a> </li>
+            </ul>
+        </nav>
     </header>
 
     <section class="banner">
@@ -21,7 +27,7 @@
     </section>
 
     <footer>
-        
+
     </footer>
 </body>
 </html>
