--- a/index.html
+++ b/index.html
@@ -1,33 +1,87 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Cardápio</title>
+    <meta name="viewport" 
+          content="width=device-width, initial-scale=1.0">
+    <title>Haruy Sushi</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
     <header class="header">
-        <img src="img/logo.png" alt="Logo Haruy Sushi">
+        <img src="./img/logo.png" 
+             alt="Haruy Sushi">                    
         <nav class="menu">
             <ul class="menu-links">
-                <li><a href="#cardapio">CARDAPIO</a></li>
-                <li><a href="https://wa.me/5515987654321" target="_blank">PEÇA PELO WHATSAPP</a> </li>
-            </ul>
+                <li><a href="#cardapio">CARDÁPIO</a></li>    
+                <li><a href="https://wa.me/5511974614291">PEÇA PELO WHATSAPP</a></li>    
+            </ul>            
         </nav>
     </header>
 
     <section class="banner">
-
+        <div class="coluna">
+            <p>O verdadeiro sabor da cozinha japonesa</p>
+            <p><a class="botao" href="#cardapio">VEJA O CARDÁPIO</a></p>
+        </div>
+        <div class="coluna">
+            <img src="./img/banner.png" alt="Prato">
+        </div>
     </section>
 
-    <section class="cardapio">
+    <section class="cardapio" id="cardapio">
+        <h1>Cardápio</h1>
+        <div class="cardapio-categoria">
+            Sushi & Sashimi
+        </div>        
+        <div class="cardapio-item">
+            <div class="cardapio-nome">Combinado Sushi</div>
+            <div class="cardapio-preco">R$ 99,00</div>
+            <div class="cardapio-descricao">10 Sashimis Variados, 10 uramakis Filadélfia e 10 Uramakis</div>            
+        </div>     
 
+        <div class="cardapio-item">
+            <div class="cardapio-nome">Combinado Hot</div>            
+            <div class="cardapio-preco">R$ 99,00</div>
+            <div class="cardapio-descricao">1 temaki Filadélfia Médio, 10 uramakis Filadélfia e 10 hot Filadélfia</div>
+        </div>
+        <div class="cardapio-item">
+            <div class="cardapio-nome">Combinado Sushi</div>            
+            <div class="cardapio-preco">R$ 115,00</div>
+            <div class="cardapio-descricao">10 Sashimis Variados, 10 uramakis Filadélfia e 10 Uramakis</div>
+        </div>
+        <div class="cardapio-item">
+            <div class="cardapio-nome">Combinado Hot</div>            
+            <div class="cardapio-preco">R$ 99,00</div>
+            <div class="cardapio-descricao">1 temaki Filadélfia Médio, 10 uramakis Filadélfia e 10 hot Filadélfia</div>
+        </div>
+
+        <div class="cardapio-categoria">
+            Bebidas
+        </div> 
+
+        <div class="cardapio-item">
+            <div class="cardapio-nome">Coca-Cola Lata</div>            
+            <div class="cardapio-preco">R$ 5,00</div>
+            <div class="cardapio-descricao">Lata de Coca-Cola 300ml trincando de gelada</div>
+        </div>
+        <div class="cardapio-item">
+            <div class="cardapio-nome">Guaraná Lata</div>            
+            <div class="cardapio-preco">R$ 5,00</div>
+            <div class="cardapio-descricao">Guaraná 300ml trincando de gelada</div>
+        </div>
+        <div class="cardapio-item">
+            <div class="cardapio-nome">Aguá sem gás</div>            
+            <div class="cardapio-preco">R$ 4,00</div>
+            <div class="cardapio-descricao">Aguá sem gás 300ml</div>
+        </div> 
     </section>
 
     <footer>
-
+        <h3>Haruy Sushi</h3>
+        <p>Rua Prof. Toledo, 500 - Centro - Sorocaba</p>
+        <p>WhatsApp: (15) 9999-1234</p>
+        <p>Aberto todos os dias das 14h às 23h </p>
     </footer>
 </body>
 </html>
