--- a/index.html
+++ b/index.html
@@ -83,5 +83,9 @@
         <p>WhatsApp: (15) 9999-1234</p>
         <p>Aberto todos os dias das 14h às 23h </p>
     </footer>
+
+    <a href="https://wa.me/5511974614291" target="_blank" class="link-whatsapp"> 
+        <img src="./img/whatsapp.png">
+    </a>
 </body>
 </html>
