--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <header class="header">
-        <img src="./img/logo.png" 
-             alt="Haruy Sushi">                    
+        <img src="./img/logo.jpg" 
+             alt="Gelado">                    
         <nav class="menu">
             <ul class="menu-links">
                 <li><a href="#cardapio">CARDÁPIO</a></li>    
@@ -21,47 +21,47 @@
 
     <section class="banner">
         <div class="coluna">
-            <p>O verdadeiro sabor da cozinha japonesa</p>
+            <p>Os congelados mais gostosos do mundo</p>
             <p><a class="botao" href="#cardapio">VEJA O CARDÁPIO</a></p>
         </div>
         <div class="coluna">
-            <img src="./img/banner.png" alt="Prato">
+            <img src="./img/banner.webp" alt="banner">
         </div>
     </section>
 
     <section class="cardapio" id="cardapio">
-        <h1>Cardápio</h1>
+        <h1>Sorvetes</h1>
         <div class="cardapio-categoria">
-            Sushi & Sashimi
+            Sorvetes
         </div>        
         <div class="cardapio-item">
-            <div class="cardapio-nome">Combinado Sushi</div>
-            <div class="cardapio-preco">R$ 99,00</div>
-            <div class="cardapio-descricao">10 Sashimis Variados, 10 uramakis Filadélfia e 10 Uramakis</div>            
+            <div class="cardapio-nome">Chocolate</div>
+            <div class="cardapio-preco">R$ 5,00</div>
+            <div class="cardapio-descricao">1 Bola de sorvete recheada de chocolate</div>            
         </div>     
 
         <div class="cardapio-item">
-            <div class="cardapio-nome">Combinado Hot</div>            
-            <div class="cardapio-preco">R$ 99,00</div>
-            <div class="cardapio-descricao">1 temaki Filadélfia Médio, 10 uramakis Filadélfia e 10 hot Filadélfia</div>
+            <div class="cardapio-nome">Pistache</div>            
+            <div class="cardapio-preco">R$ 8,00</div>
+            <div class="cardapio-descricao">1 Bola de sorvete recheada de pistache</div>
         </div>
         <div class="cardapio-item">
-            <div class="cardapio-nome">Combinado Sushi</div>            
-            <div class="cardapio-preco">R$ 115,00</div>
-            <div class="cardapio-descricao">10 Sashimis Variados, 10 uramakis Filadélfia e 10 Uramakis</div>
+            <div class="cardapio-nome">Caramelo</div>            
+            <div class="cardapio-preco">R$ 5,00</div>
+            <div class="cardapio-descricao">1 Bola de sorvete recheada de caramelo</div>
         </div>
         <div class="cardapio-item">
-            <div class="cardapio-nome">Combinado Hot</div>            
-            <div class="cardapio-preco">R$ 99,00</div>
-            <div class="cardapio-descricao">1 temaki Filadélfia Médio, 10 uramakis Filadélfia e 10 hot Filadélfia</div>
+            <div class="cardapio-nome">Creme</div>            
+            <div class="cardapio-preco">R$ 4,00</div>
+            <div class="cardapio-descricao">1 Bola de sorvete recheada de creme</div>
         </div>
     </section>
 
     <footer>
-        <h3>Haruy Sushi</h3>
-        <p>Rua Prof. Toledo, 500 - Centro - Sorocaba</p>
+        <h3>Gelado</h3>
+        <p>Rua Penha, 222 - Centro - Sorocaba</p>
         <p>WhatsApp: (15) 9999-1234</p>
-        <p>Aberto todos os dias das 14h às 23h </p>
+        <p>Aberto todos os dias das 9h às 18h </p>
     </footer>
 
     <a href="https://wa.me/5511974614291" target="_blank" class="link-whatsapp"> 
