--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" 
           content="width=device-width, initial-scale=1.0">
-    <title>Haruy Sushi</title>
+    <title>Gelado</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <header class="header">
-        <img src="./img/logo.jpg" 
-             alt="Gelado">                    
+        <img src="./img/logo.jpg" width="300" alt="Gelado">                    
         <nav class="menu">
             <ul class="menu-links">
                 <li><a href="#cardapio">CARDÁPIO</a></li>    
@@ -30,7 +29,7 @@
     </section>
 
     <section class="cardapio" id="cardapio">
-        <h1>Sorvetes</h1>
+        <h1>Cardápio</h1>
         <div class="cardapio-categoria">
             Sorvetes
         </div>        
